static/css/modal.css
.ep_profile_modal{
	font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
    width: 350px;
    height: 537px;
    background-color: #fff;
    position: absolute;
    /* top: 23%;
    right: 41.3%; */
    visibility: hidden;
        overflow: hidden;
    color: rgb(32, 33, 36);
    z-index: 9999;
	transition: all .3s;
	/* border-radius: 0 0 6px 6px; */
	box-shadow: 1px 1px 4px rgb(87, 98, 115, .1);
	border: 1px solid #e6e8e9;
    font-size: 14px;
    transform: scale(.7);
    opacity: 0;
    transition: all .3s cubic-bezier(.74,-.05,.27,1.75);
    top: 0;
    bottom: 0;
    margin: auto;
    left: 0;
    right: 0;
}
.ep_profile_modal-show {
    transform: scale(1) !important;
    opacity: 1 !important;
    visibility: visible !important;
}

#ep-profile-image{
    height: 32px;
    width: 32px;
    border-radius: 50%;
    cursor: pointer;
}

#ep-profile-image:hover{
    background-color: darkgray;
}
.ep_profile_modal_section_image{
    width : 100%;
    height: 128px;
    margin-top: 5%;
    text-align: center;
    cursor: pointer;

}
.lable_ep_profile_modal_section_image_big{
    cursor: pointer;

}
.ep_profile_modal_file{
    opacity: 0;
    z-index: -1;
    display: none;
  }

.ep_profile_modal_section_info{
    width : 100%;
    height: 33%;
    display: inline-grid;
    margin: auto;
    margin-top: 7%;

}
.ep_profile_modal_section_image_big{
    width:128px;
    height:128px;
    margin: auto;
    border-radius: 50%;
}
.avatarImg{
    width : 26px ;
    height: 26px    ;
}
.ep_profile_modal_section_image_big_ask{
    width: 128px;
    height: 128px;
    border-radius: 50%;
    margin: auto;

 
}
.ep_profile_modal_section_info_name{
    display: block;
    text-align: center;
    color: #202124;
    font: 500 16px/22px Google Sans,Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
    letter-spacing: .29px;
    margin: 0;
    text-align: center;
    text-overflow: ellipsis;
    overflow: hidden;
    font-weight: bold;
}
.ep_profile_modal_section_info_email{
    color: #5f6368;
    font: 400 14px/19px Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
    letter-spacing: normal;
    text-align: center;
    text-overflow: ellipsis;
    overflow: hidden;
}
.ep_profile_modal_section_info_input{
    display: block;
    margin: auto;
    margin-bottom: 2%;
    background-color: white !important;
    border: 1px solid #eee !important;
}
.ep_profile_modal_section_info_submit{
    display: block;
    margin: auto;
    margin-bottom: 2%;
    background-color: green !important;
    border: 1px solid #eee !important;
}
.ep_profile_modal_section_info_correct{
    width: 32px;
    height: 32px;
    /* border: 1.2px green solid; */

}
.ep_profile_modal_section_info_modal{
    margin-top: 6%;
}
.ep_profile_modal_input_box {
    display: inline-flex;
    margin: auto;
    margin-bottom: 3%;
}
.ep_profile_modal_section_info_correct_style{
    /* border: 1px green solid; */
    padding: 0.4%;
    height: 36px;
    width: 36px;
    cursor: pointer;
}
.ep_profile_modal_section_info_correct:hover{
    border: 0px;

}
.userlist{
    margin: auto;
    display: flex;
    cursor: pointer;
    padding-right: 5px;
}
.userlist_img{
 
    margin: auto;
 
}
.userlist_img hide{
    visibility: hidden;
}
.userlist_img show{
    visibility: visible;
}
.userlist_count{
    padding-right: 10px;
    font-weight: 900;
    font-size: 20pt;
    color: #2678ff;
    padding-top: 4px;
    padding-left: 5px;
}
.slash_profile{
    padding-right: 1px;
    font-weight: 900;
    font-size: 16pt;
    color: #2678ff;
    padding-left: 1px;
    padding-top: 5px;
}
.ep_profile_modal_submit{
    width : 160px;
    height : 32px;
    background-color: green;
    border : 0 ;
    color : #fff;
}
.ep_profile_modal_signout{
    width: 85px;
    height: 32px !important;
    border: 0;
    background-color: red;
    color: white;
    margin: auto;
    float: left;
    display: flow-root;
    margin-left: 65px;
    
}
.ep_profile_modal_save{
    width: 85px;
    height: 32px !important;
    border: 0;
    background-color: green;
    color: white;
    margin: auto;
    float: right;
    display: flow-root;
    margin-right: 65px;
    
}

#ep_profile_modal_close_ask{
    color : "black" ;
    float: right;
    margin-right: 2%;
    font-size: 14pt;
    cursor: pointer;
}
#ep_profile_modal_close{
    color : "black" ;
    float: right;
    margin-right: 2%;
    font-size: 14pt;
    cursor: pointer;
}
.ep_profile_modal_validation_error {
    border-color: red !important;
}

.ep_prfile_close_icon{
    background-image: url("../img/close.png");
	width: 14px;
	height: 14px;
	float: right;
	cursor: pointer;
}
.ep_profile_modal_user_list{
    font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
    width: 587px;
    max-height: 664px;
    background-color: #fff;
    position: absolute;

    /* top: 15%;
    right: 40.3%; */
    visibility: hidden;
        overflow: hidden;
    color: rgb(32, 33, 36);
    z-index: 500;
	transition: all .3s;
	/* border-radius: 0 0 6px 6px; */
	/* box-shadow: 1px 1px 4px rgb(87, 98, 115, .1); */
	/* border: 1px solid #e6e8e9; */
    font-size: 14px;
    transform: scale(.7);
    opacity: 0;
    transition: all .3s cubic-bezier(.74,-.05,.27,1.75);
    overflow-y: scroll;
    z-index: 9999;
    top: 0;
    bottom: 0;
    margin: auto;
    left: 0;
    right: 0;
    border-radius: 9px;
}
#ep_profile_modal_user_list_close{
    float: right;
    margin-top: 38px;
    margin-right: 31px;
    width: 14px;
    height: 14px;
    background-repeat: no-repeat;
}
.ep_profile_user_row{
    height: 69px;
    padding-left: 26px;
    padding-right: 26px;
    margin-top: 44px;
    margin-bottom: 45px;
    width: 100%;
}

/* .ep_profile_user_list_date_title{

} */

.ep_profile_user_list_date_title_header{
    width: 100%;
    height: 80px;
    border-bottom: 1px solid #000000;



}
.ep_profile_user_date_title{
    width: 100%;
    color: black;
    font-weight: bold;
    padding-left: 11px;
    padding-bottom: 5px;
    font-size: 16px;
    padding-top: 5px;

}
.ep_profile_header_of_contributors{
    padding-left: 26px;
    padding-bottom: 5px;
    padding-top: 32px;
    float: left;
    font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 22px;
    line-height: 26px;
    color: #000000;

}

.ep_profile_user_list_global_title{
    width: 100%;
    height: 40px;
    border: 1px solid gray;
    padding-left: 10px;
    padding-top: 10px;
    margin-bottom: 5px;
}
.ep_profile_user_img{

    float: left;
    height: 69px;
    width: 69px;
    border-radius: 145.833px;
}
.ep_profile_user_username{
   
    float: left;
    padding-left: 5%;
    padding-top: 0%;
    font-weight: 700;
 
}
.ep_profile_contributor_status{
    font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 13px;
    line-height: 134.19%;
    color: #848484;
    float: right;
    max-width: 114px;
    height: 17px;
    padding-top: 1px;
}
.ep_profile_user_list_container{
    height: auto;
    width: 100%;
}
.ep_profile_contributor_link_container{
    background-image: url("../img/link.png");
    width: 20px;
    height: 10px;
    margin-left: 9px;
    margin-top : 5px;
    float: left;

}
.ep_profile_user_list_username_text{
    max-width: 130px;
    overflow: hidden;
    font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    line-height: 21px;
    align-items: center;
    color: #000000;
    word-break: break-all;
    float: left;


}
.ep_profile_user_list_username
{
    word-break: break-all;
    height: 22px;
    overflow: hidden;
    font-family: Roboto;
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    line-height: 21px;
    align-items: center;
    color: #000000;
    width: 100%;
    float: left;

}
.ep_profile_user_list_profile_userDesc{
    float: left;
    padding-left: 26px;
    width: 440px;
    /* margin-top: 20px;
    margin-left: 20px;
    width: 161px; */
}
.ep_profile_user_list_profile_desc {
    text-align: left;
    word-break: break-all;
    height: 25px;
    overflow: hidden;
    font-family: Roboto;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 134.19%;
    padding-top: 5.5px;
    float: left;
    color: #474747;


}
.ep_profile_user_list_profile_homepage{
    text-align: left;
    word-break: break-all;
    height: 39px;
    overflow: hidden;
}
.ep_profile_user_list_container_off{
    /* margin-top: 5%;
    padding-top: 4%;
    border-top: 1px solid lightgray; */
    color: gray;
    width: 100%;
    height: auto;
}
.ep_profile_inlineAvatars{
    display: flex;
	flex-direction: row;
	justify-content: flex-end;
	padding-right: 8px;
    max-width: 220px;
    padding-right: 24px;
}

.ep_profile_inlineAvatars .avatar,.ep_profile_inlineAvatars .avatarMore {
	float:left;
     margin: 0 -14px 0 0; 
	position: relative;
	transition: all 0.2s cubic-bezier(0,.71,.47,1.1);
	background-color: #fff;
	display: flex;
	flex-direction: row;
	/* border: 2px solid #fff; */
	border-radius: 50%;
	float: left;
	overflow: hidden;
}
.ep_profile_inlineAvatars  .avatar img{
	float: left;
}
.ep_profile_inlineAvatars:first-child{
	margin: 0;
}

.ep_profile_inlineAvatars .avatar img{
	 width: 26px;
    height: 26px;
 }

.ep_profile_inlineAvatars .avatarMore{
	display: none;
}

.ep_profile_inlineAvatars > .avatar:hover, .ep_profile_inlineAvatars .avatarMore:hover{
	border-color: #2678ff;
	z-index: 1;
	transform: scale(1.2);
}

.ep_profile_inlineAvatars .avatarMore:active {
	transform: scale(0.9);
}

.ep_profile_inlineAvatars .avatarMore {
	border-style: dashed;
	text-align: center;
	order: -1;
	margin-right: 5px;
	font-family: Quicksand;
	font-weight: bold;
	background: transparent;
	justify-content: center;
	padding-right: 2px;
	border-color: #fff;
	cursor: pointer;
}
.ep_profile_modal_header{
    justify-content: flex-start;
    display: flex;
    margin-left: auto;
}


.ep_profile_modal-form-lable-section{
    width:auto;
    text-align: center;
    margin-top: 15px;

  }

  .ep_profile_modal-form-lable-section-left{
    width: auto;
    text-align: left;
    margin-bottom: 15px;
    padding-left: 65px;
 

  }
  .ep_profile_modal-form-lable-section .ep_profile_modal-form-lable{
    margin-left: 8px;
    margin-top: 4px;
    position: absolute;
    width: 30px;
    text-align: center;
    font-weight: 700;
    /* color: #0074fd; */
  }
  .ep_profile_modal-form-lable-section .ep_profile_modal-form-lable-disabled{
    
    margin-left: 8px;
    margin-top: 4px;
    position: absolute;
    width: 30px;
    text-align: center;
    font-weight: 700;
    color : gray;
  }
  .ep_profile_modal-content{
    width: 220px;
    border: 1px solid gray !important;
    padding-left: 10px!important;
    padding-top: 24px!important;
    padding-bottom: 0!important;
    padding-right: 0!important;
    height: 51px;
    margin: 0 !important;
    background-color: white !important;

  }
.ep_profile_modal_verification{
    text-decoration: underline;
    color : gray;
    font-style: italic;
}
.ep_profile_general_overlay{
    display: none;
    position: fixed;
    width: 100%; 
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0,0,0,0.5);
    z-index: 9998; 
    cursor: pointer;
    transform: scale(.7);
    opacity: 0;
    transition: all .3s cubic-bezier(.74,-.05,.27,1.75);
}
.ep_profile_general_overlay_show {
    transform: scale(1) !important;
    opacity: 1 !important;
    visibility: visible !important;
}

